Fix calculator on mobile

--- a/frontend/src/app/nav/nav.component.scss
+++ b/frontend/src/app/nav/nav.component.scss
@@ -10,6 +10,7 @@
 
 .dropdown-item {
   color: white !important;
+  background: none;
   &:hover {
     background: none;
     color: #a4e0d5 !important;
